# chip8-emulator

./: CMakeLists.txt
src/: chip8.cpp  chip8.hpp  main.cpp
